--- a/Source/TitoCad.lpi
+++ b/Source/TitoCad.lpi
@@ -170,7 +170,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="units\MisUtils_1at_28Sep2017;units\SynFacilUtils_1at_31Dec2017;..\..\_Librerias\MiConfig 0.3b;..\..\_Librerias\MotGraf-0.2;..\..\_Librerias\UtilsGrilla 0.4;ConfigFrames"/>
+      <OtherUnitFiles Value="units\MisUtils_1at_28Sep2017;units\SynFacilUtils_1at_31Dec2017;units/MiConfig_4at_15Nov2017;..\..\_Librerias\MotGraf-0.2;..\..\_Librerias\UtilsGrilla 0.4;ConfigFrames"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
