FormPrincipal -> Form1, FormPrincipal.pas -> TypeForm1.pas, Tformpricipal -> TForm1 #8

--- a/Source/TitoCad.lpi
+++ b/Source/TitoCad.lpi
@@ -69,9 +69,9 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="FormPrincipal.pas"/>
+        <Filename Value="TypeForm1.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="frmPrincipal"/>
+        <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
