--- a/Source/TitoCad.lpi
+++ b/Source/TitoCad.lpi
@@ -107,7 +107,7 @@
         <ResourceBaseClass Value="Frame"/>
       </Unit6>
       <Unit7>
-        <Filename Value="FormControlVista.pas"/>
+        <Filename Value="TypeFormPerspective.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmControlVista"/>
         <HasResources Value="True"/>
