--- a/Source/TitoCad.lpi
+++ b/Source/TitoCad.lpi
@@ -151,7 +151,7 @@
         <IsPartOfProject Value="True"/>
       </Unit14>
       <Unit15>
-        <Filename Value="FormVistaProp.pas"/>
+        <Filename Value="TypeFormPropView.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmVistaProp"/>
         <ResourceBaseClass Value="Form"/>
