--- a/Source/TitoCad.lpi
+++ b/Source/TitoCad.lpi
@@ -136,7 +136,7 @@
         <IsPartOfProject Value="True"/>
       </Unit11>
       <Unit12>
-        <Filename Value="FrameExplorProyectos.pas"/>
+        <Filename Value="guiFrameProjExplorer.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraExplorProyectos"/>
         <HasResources Value="True"/>
@@ -153,7 +153,8 @@
       <Unit15>
         <Filename Value="TypeFormPropView.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="frmVistaProp"/>
+        <ComponentName Value="FormPropView"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit15>
     </Units>
