binaries with project and platforn name in special directory #11

--- a/Source/TitoCad.lpi
+++ b/Source/TitoCad.lpi
@@ -2,7 +2,7 @@
 <CONFIG>
   <ProjectOptions>
     <Version Value="11"/>
-    <PathDelim Value="\"/>
+    <PathDelim Value="/"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
@@ -13,38 +13,8 @@
     <i18n>
       <EnableI18N LFM="False"/>
     </i18n>
-    <BuildModes Count="2">
-      <Item1 Name="Debug" Default="True"/>
-      <Item2 Name="Release">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <PathDelim Value="\"/>
-          <Target>
-            <Filename Value="..\TitoCad"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="$(ProjOutDir)"/>
-            <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
-          </SearchPaths>
-          <CodeGeneration>
-            <SmartLinkUnit Value="True"/>
-            <Optimizations>
-              <OptimizationLevel Value="3"/>
-            </Optimizations>
-          </CodeGeneration>
-          <Linking>
-            <Debugging>
-              <GenerateDebugInfo Value="False"/>
-            </Debugging>
-            <LinkSmart Value="True"/>
-            <Options>
-              <Win32>
-                <GraphicApplication Value="True"/>
-              </Win32>
-            </Options>
-          </Linking>
-        </CompilerOptions>
-      </Item2>
+    <BuildModes Count="1">
+      <Item1 Name="Release" Default="True"/>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -69,63 +39,63 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="gui\guiForm1.pas"/>
+        <Filename Value="gui/guiForm1.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
       <Unit2>
-        <Filename Value="sketch\sketchEvalExpres.pas"/>
+        <Filename Value="sketch/sketchEvalExpres.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit2>
       <Unit3>
-        <Filename Value="gui\guiFormConfig.pas"/>
+        <Filename Value="gui/guiFormConfig.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Config"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit3>
       <Unit4>
-        <Filename Value="gui\guiFrameCfgSynEdit.pas"/>
+        <Filename Value="gui/guiFrameCfg/guiFrameCfgSynEdit.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraCfgSynEdit"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit4>
       <Unit5>
-        <Filename Value="gui\guiFrameCfgGeneral.pas"/>
+        <Filename Value="gui/guiFrameCfg/guiFrameCfgGeneral.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraCfgGeneral"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit5>
       <Unit6>
-        <Filename Value="gui\guiFrameCfgPanCom.pas"/>
+        <Filename Value="gui/guiFrameCfg/guiFrameCfgPanCom.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraCfgPanCom"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit6>
-      <Unit7>
-        <Filename Value="gui\guiFormPerspective.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="FormPerspective"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Form"/>
-      </Unit7>
-      <Unit8>
-        <Filename Value="gui\guiFrameCfgView.pas"/>
+      <Unit7>       
+        <Filename Value="gui/guiFrameCfg/guiFrameCfgView.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraCfgVista"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
+      </Unit7>
+      <Unit8>
+        <Filename Value="gui/guiFormPerspective.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormPerspective"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
       </Unit8>
       <Unit9>
-        <Filename Value="sketch\sketchDocument.pas"/>
+        <Filename Value="sketch/sketchDocument.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit9>
       <Unit10>
-        <Filename Value="gui\guiFormProject.pas"/>
+        <Filename Value="gui/guiFormProject.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmProject"/>
         <HasResources Value="True"/>
@@ -136,40 +106,40 @@
         <IsPartOfProject Value="True"/>
       </Unit11>
       <Unit12>
-        <Filename Value="gui\guiFrameProjExplorer.pas"/>
+        <Filename Value="gui/guiFrameProjExplorer.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraExplorProyectos"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit12>
       <Unit13>
-        <Filename Value="sketch\sketchDxf.pas"/>
+        <Filename Value="sketch/sketchDxf.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit13>
       <Unit14>
-        <Filename Value="sketch\sketchCore.pas"/>
+        <Filename Value="sketch/sketchCore.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit14>
       <Unit15>
-        <Filename Value="gui\guiFormViewProp.pas"/>
+        <Filename Value="gui/guiFormViewProp.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormPropView"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit15>
       <Unit16>
-        <Filename Value="gui\guiFramePaintBox.pas"/>
+        <Filename Value="gui/guiFramePaintBox.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraVisorGraf"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit16>
       <Unit17>
-        <Filename Value="sketch\sketchEditor.pas"/>
+        <Filename Value="sketch/sketchEditor.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit17>
       <Unit18>
-        <Filename Value="gui\guiFrameEditor.pas"/>
+        <Filename Value="gui/guiFrameEditor.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fraGrafEditor"/>
         <HasResources Value="True"/>
@@ -179,36 +149,31 @@
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
-    <PathDelim Value="\"/>
+    <PathDelim Value="/"/>
     <Target>
-      <Filename Value="application\$NameOnly($(ProjFile)).$(SrcOS).$(TargetCPU)"/>
+      <Filename Value="application/$NameOnly($(ProjFile)).$(SrcOS).$(TargetCPU)"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="units\MisUtils_1at_28Sep2017;units\SynFacilUtils_1at_31Dec2017;units\MiConfig_4at_15Nov2017;units\MotGraf_5at_9Jan2017;units\UtilsGrilla_2at_18Nov2017;gui;gui\guiFrameCfg;sketch"/>
-      <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
+      <OtherUnitFiles Value="units/MiConfig_4at_15Nov2017;units/MisUtils_1at_28Sep2017;units/MotGraf_5at_9Jan2017;units/SynFacilUtils_1at_31Dec2017;units/UtilsGrilla_2at_18Nov2017;gui;gui/guiFrameCfg;sketch"/>
+      <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
-    <Parsing>
-      <SyntaxOptions>
-        <IncludeAssertionCode Value="True"/>
-      </SyntaxOptions>
-    </Parsing>
     <CodeGeneration>
-      <Checks>
-        <IOChecks Value="True"/>
-        <RangeChecks Value="True"/>
-        <OverflowChecks Value="True"/>
-        <StackChecks Value="True"/>
-      </Checks>
-      <VerifyObjMethodCallValidity Value="True"/>
+      <SmartLinkUnit Value="True"/>
+      <Optimizations>
+        <OptimizationLevel Value="3"/>
+      </Optimizations>
     </CodeGeneration>
     <Linking>
       <Debugging>
-        <DebugInfoType Value="dsDwarf2Set"/>
-        <UseHeaptrc Value="True"/>
-        <TrashVariables Value="True"/>
-        <UseExternalDbgSyms Value="True"/>
+        <GenerateDebugInfo Value="False"/>
       </Debugging>
+      <LinkSmart Value="True"/>
+      <Options>
+        <Win32>
+          <GraphicApplication Value="True"/>
+        </Win32>
+      </Options>
     </Linking>
   </CompilerOptions>
   <Debugging>
