Rename project to GraciasTito #14

--- a/GraciasTito.lpi
+++ b/GraciasTito.lpi
@@ -34,7 +34,7 @@
     </RequiredPackages>
     <Units Count="19">
       <Unit0>
-        <Filename Value="TitoCad.lpr"/>
+        <Filename Value="GraciasTito.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
