--- a/GraciasTito.lpi
+++ b/GraciasTito.lpi
@@ -35,6 +35,7 @@
       <Unit0>
         <Filename Value="GraciasTito.lpr"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="TitoCad"/>
       </Unit0>
       <Unit1>
         <Filename Value="gui/guiForm1.pas"/>
