--- a/src/gTitoCAD.lpi
+++ b/src/gTitoCAD.lpi
@@ -53,7 +53,7 @@
       <Unit3>
         <Filename Value="forms/uFormDocument.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="formDocument"/>
+        <ComponentName Value="FormDocument"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit3>
